fixed offcanvas width on mobile and hopefully the icon for the offcanvas

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -88,8 +88,8 @@ body{
 }
 
 .sidebar-icon{
-  width: 7vh;
-  height: 6vh;
+  width: 5vh;
+  height: 4vh;
   position: relative;
   display: flex;
   flex-direction: column;
